--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -48,7 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.displot(labels_and_boxes['label'])"
+    "sns.displot(labels_and_boxes['label'])\n",
+    "plt.show()"
    ]
   },
   {
@@ -108,7 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.displot(easy_labels_and_boxes['label'])"
+    "sns.displot(easy_labels_and_boxes['label'])\n",
+    "plt.show()"
    ]
   },
   {
@@ -120,6 +122,14 @@
    "source": [
     "easy_labels_and_boxes.to_csv(os.path.join('..','input','inz-data-prep','easy_labels_and_data.csv'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3313c2d-d42a-46e3-aa88-1bebbd77bcd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
