--- a/first_model.ipynb
+++ b/first_model.ipynb
@@ -49,8 +49,9 @@
     "        ax.add_patch(rect)\n",
     "    \n",
     "plt.figure()\n",
-    "show_image_bbox(io.imread(path.join('../input/crop-and-weed-detection-data-with-bounding-boxes/agri_data/data/agri_0_1009.jpeg')), \n",
-    "               labels_frame.iloc[1343:, 2:6])\n",
+    "idx=1343\n",
+    "show_image_bbox(io.imread(path.join('../input/crop-and-weed-detection-data-with-bounding-boxes/agri_data/data/', labels_frame.iloc[idx, 0])), \n",
+    "               labels_frame.iloc[idx:, 2:6])\n",
     "plt.show()"
    ]
   },
