--- a/explanations.ipynb
+++ b/explanations.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "c4389953-c622-4b13-a3e2-c36631f86e80",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "097fe7f7-90fb-4c17-abe2-55a7e1ab2133",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "5eb10183-519a-4caa-a9b6-f006a73b7c18",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "fcbeb23b-85e1-4acb-b011-c224d7460de5",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "007ebcd4-fce6-48a8-a94b-1b5ca0191b50",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "tensor([[-1.7695,  2.8448]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "494beff6-7572-43b7-9dd8-b90988120d44",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "7259be35-3fd7-46bc-8e8f-21f9de26e712",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "30b64238",
    "metadata": {},
    "outputs": [],
@@ -226,17 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "34aad790",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataset.Subset at 0x7fdc707362b0>"
+       "<torch.utils.data.dataset.Subset at 0x251d0487040>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "8f7a1cc5-7315-4016-9b9b-85f724c82925",
    "metadata": {},
    "outputs": [],
@@ -260,16 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "45374c79-bafc-4e8f-8da1-0d9142e09726",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11c3455ca6dc4070adaa3ad3e73ee136",
+       "model_id": "a25d1982fa534411abcdcd39b99225bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b20edffbb4dd4458a9f85311f776c663",
+       "model_id": "755e8e06eda843b282cdf18ea792c735",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,8 +294,16 @@
     }
    ],
    "source": [
-    "visualizer.render()"
+    "visualizer.render(debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03fc6e38-e120-4f6f-a2a8-a38e0e44a055",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
