--- a/first_model.ipynb
+++ b/first_model.ipynb
@@ -51,7 +51,7 @@
     "plt.figure()\n",
     "idx=1343\n",
     "show_image_bbox(io.imread(path.join('../input/crop-and-weed-detection-data-with-bounding-boxes/agri_data/data/', labels_frame.iloc[idx, 0])), \n",
-    "               labels_frame.iloc[idx:, 2:6])\n",
+    "               labels_frame[labels_frame['filename']==labels_frame.loc[idx, 'filename']].iloc[:,2:6])\n",
     "plt.show()"
    ]
   },
@@ -271,12 +271,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e6d3ad81-ce37-4754-8f76-bb5ea799befa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "model_path = path.join('models', 'resnet-18')\n",
+    "model_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d2e3326c-82c5-4631-8eeb-0e73ffd912be",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.save(model.state_dict(), path.join('models', 'resnet-18'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a07aeee9-e29d-4556-8868-d4084cbb0cb1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#model.load_state_dict(torch.load(model_path, map_location=torch.device('cpu')))\n",
+    "#model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a58297-cd1a-4e21-b174-249dfd38ecc8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
