--- a/Metrics_development_tests.ipynb
+++ b/Metrics_development_tests.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -35,12 +35,12 @@
      "text": [
       "\n",
       "  0%|          | 0.00/82.7k [00:00<?, ?B/s]\n",
-      "100%|##########| 82.7k/82.7k [00:00<00:00, 5.14MB/s]\n"
+      "100%|##########| 82.7k/82.7k [00:00<00:00, 4.11MB/s]\n"
      ]
     }
    ],
    "source": [
-    "!kaggle competitions download -f /ILSVRC/Data/CLS-LOC/train/n01491361/n01491361_9052.JPEG -p ./images -c imagenet-object-localization-challenge"
+    "!kaggle competitions download -f \"/ILSVRC/Data/CLS-LOC/train/n01491361/n01491361_9052.JPEG\" -p ./images -c imagenet-object-localization-challenge --force"
    ],
    "metadata": {
     "collapsed": false
