--- a/Metrics_development_tests.ipynb
+++ b/Metrics_development_tests.ipynb
@@ -463,7 +463,7 @@
     }
    ],
    "source": [
-    "M.matrix_norm_2(2*torch.ones(4,4,4), torch.zeros(4,4,4), sum_dim=-1)"
+    "M.matrix_2_norm(2*torch.ones(4,4,4), torch.zeros(4,4,4), sum_dim=-1)"
    ],
    "metadata": {
     "collapsed": false
@@ -681,7 +681,7 @@
     "tensor = torch.cat([ones, twos])\n",
     "xyz = M.tensor_to_list_tensors(tensor, depth=2)\n",
     "diffs = [\n",
-    "    M.matrix_norm_2(exp1, exp2).item()\n",
+    "    M.matrix_2_norm(exp1, exp2).item()\n",
     "    for exp1, exp2 in itertools.combinations(xyz, 2)\n",
     "]"
    ],
