Fixes for proper explanation shapes

--- a/Functionalities_showcase.ipynb
+++ b/Functionalities_showcase.ipynb
@@ -9,17 +9,22 @@
    "outputs": [],
    "source": [
     "import EnsembleXAI.Metrics as Metrics\n",
-    "import EnsembleXAI.Ensemble as Ensemble\n",
     "import torchvision.transforms.functional as transform\n",
     "import torch\n",
     "from torchvision.transforms import Resize\n",
     "import os\n",
     "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
     "from torchvision.models import resnet50, ResNet50_Weights\n",
-    "from torchvision.datasets import ImageNet\n",
     "import urllib.request\n",
-    "import json"
+    "import json\n",
+    "import numpy as np\n",
+    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "from captum.attr import IntegratedGradients\n",
+    "from captum.attr import GradientShap\n",
+    "from captum.attr import Occlusion\n",
+    "from captum.attr import NoiseTunnel\n",
+    "from captum.attr import visualization as viz\n",
+    "from torchvision import transforms"
    ]
   },
   {
@@ -212,7 +217,6 @@
    "execution_count": 36,
    "outputs": [],
    "source": [
-    "from torchvision import transforms\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize(256),\n",
     "    transforms.CenterCrop(224),\n",
@@ -272,23 +276,6 @@
     "_, preds2 = torch.max(outputs2, 1)\n",
     "probs2 = torch.nn.functional.softmax(outputs2, dim=1)\n",
     "[imagenet_classes_dict[str(i.item())][1] for i in preds2] # gar = Niszczukokształtne"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from matplotlib.colors import LinearSegmentedColormap\n",
-    "from captum.attr import IntegratedGradients\n",
-    "from captum.attr import GradientShap\n",
-    "from captum.attr import Occlusion\n",
-    "from captum.attr import NoiseTunnel\n",
-    "from captum.attr import visualization as viz"
    ],
    "metadata": {
     "collapsed": false
@@ -597,6 +584,169 @@
    ],
    "source": [
     "attributions_ig_nt[0,1]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "outputs": [],
+   "source": [
+    "x = [1,2,3,4]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2"
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[-3]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([24., 24., 24., 24., 24.])"
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(torch.ones([5,2,3,4]), dim=(-3,-2,-1))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([10, 3, 224, 224])"
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attributions_occ3.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0012051332741975784"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Metrics.consistency(attributions_occ3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.002374188508838415"
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Metrics.consistency(torch.cat([attributions_occ, attributions_occ2], dim=0))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([2, 3, 224, 224])"
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([attributions_occ, attributions_occ2], dim=0).shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "ones = torch.Tensor([1]).repeat(4, 3, 10, 10)\n",
+    "consist = Metrics.consistency(ones)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.0"
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consist"
    ],
    "metadata": {
     "collapsed": false
