Last Metrics test

--- a/notebooks/Metrics_development_tests.ipynb
+++ b/notebooks/Metrics_development_tests.ipynb
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -1894,6 +1894,86 @@
    ],
    "source": [
     "M.intersection_over_union(a, b)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([0.8660, 0.8660, 0.8660, 0.8660])"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images = torch.Tensor([0, 0.2, 0.4, 0.6, 0.8]).repeat(4,3,5,1)\n",
+    "image = torch.Tensor([0.1, 0.3, 0.5, 0.7, 0.9]).repeat(3,5,1)\n",
+    "M.matrix_2_norm(images, image, sum_dim=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor(120.), tensor(37.5000))"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(images), torch.sum(image)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "def _explain_dummy(imagez_tensor):\n",
+    "    summed = torch.sum(imagez_tensor)\n",
+    "    n = imagez_tensor.shape[0]\n",
+    "    if summed > 100:\n",
+    "        explanation = torch.Tensor([0,0,0,1,1]).repeat(n, 3, 5, 1)\n",
+    "    else:\n",
+    "        explanation = torch.Tensor([0,0,1,1,0]).repeat(n, 3, 5, 1)\n",
+    "    return explanation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.13370312750339508"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.stability(_explain_dummy, image, images, 1)"
    ],
    "metadata": {
     "collapsed": false
