--- a/notebooks/Metrics_development_tests.ipynb
+++ b/notebooks/Metrics_development_tests.ipynb
@@ -480,7 +480,7 @@
     "cross_2d = torch.Tensor([[1, 0, 1],\n",
     "                         [0, 1, 0],\n",
     "                         [1, 0, 1]])\n",
-    "intersect = M._intersection_mask(plus_2d, cross_2d)"
+    "intersect = M.intersection_mask(plus_2d, cross_2d)"
    ],
    "metadata": {
     "collapsed": false
@@ -528,7 +528,7 @@
     "blus_threshold_2d = torch.Tensor([[0, 1, 0],\n",
     "                                  [1, 1, 1],\n",
     "                                  [0, 1, 0]])\n",
-    "intersect = M._intersection_mask(plus_threshold_2d, blus_threshold_2d, threshold1=0.3)"
+    "intersect = M.intersection_mask(plus_threshold_2d, blus_threshold_2d, threshold1=0.3)"
    ],
    "metadata": {
     "collapsed": false
@@ -585,7 +585,7 @@
     "cross_2d = torch.Tensor([[1, 0, 1],\n",
     "                         [0, 1, 0],\n",
     "                         [1, 0, 1]])\n",
-    "union = M._union_mask(plus_2d, cross_2d)"
+    "union = M.union_mask(plus_2d, cross_2d)"
    ],
    "metadata": {
     "collapsed": false
@@ -622,7 +622,7 @@
     "union_threshold_b = torch.Tensor([[0, 0, 0],\n",
     "                                  [0, 0, 0],\n",
     "                                  [0.6, 0.6, 0.6]])\n",
-    "union = M._union_mask(union_threshold_a, union_threshold_b, threshold1=0.5)"
+    "union = M.union_mask(union_threshold_a, union_threshold_b, threshold1=0.5)"
    ],
    "metadata": {
     "collapsed": false
@@ -1266,7 +1266,7 @@
    "outputs": [],
    "source": [
     "squeezed_expl = expl.squeeze(dim=1)\n",
-    "overlaping_area = M._intersection_mask(squeezed_expl, mask, threshold1=threshold)\n",
+    "overlaping_area = M.intersection_mask(squeezed_expl, mask, threshold1=threshold)\n",
     "divisor = torch.sum(torch.abs(squeezed_expl) > threshold, dim=(-2, -1))\n",
     "value = torch.sum(overlaping_area, dim=(-2, -1)) / divisor"
    ],
@@ -1554,18 +1554,18 @@
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "_intersection_mask() missing 2 required positional arguments: 'tensor1' and 'tensor2'",
+     "evalue": "intersection_mask() missing 2 required positional arguments: 'tensor1' and 'tensor2'",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
       "Cell \u001B[1;32mIn [40], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m M\u001B[38;5;241m.\u001B[39m_intersection_mask()\n",
-      "\u001B[1;31mTypeError\u001B[0m: _intersection_mask() missing 2 required positional arguments: 'tensor1' and 'tensor2'"
+      "\u001B[1;31mTypeError\u001B[0m: intersection_mask() missing 2 required positional arguments: 'tensor1' and 'tensor2'"
      ]
     }
    ],
    "source": [
-    "M._intersection_mask()"
+    "M.intersection_mask()"
    ],
    "metadata": {
     "collapsed": false
@@ -1627,7 +1627,7 @@
     }
    ],
    "source": [
-    "M._intersection_mask(cross_2d, plus_2d)"
+    "M.intersection_mask(cross_2d, plus_2d)"
    ],
    "metadata": {
     "collapsed": false
@@ -1647,7 +1647,7 @@
     }
    ],
    "source": [
-    "M._union_mask(cross_2d, plus_2d)"
+    "M.union_mask(cross_2d, plus_2d)"
    ],
    "metadata": {
     "collapsed": false
@@ -1660,7 +1660,7 @@
    "source": [
     "cross_2d_small = 0.4*cross_2d\n",
     "plus_2d_small = 0.7*plus_2d\n",
-    "M._intersection_mask(cross_2d_small, plus_2d_small, threshold1=0.5)"
+    "M.intersection_mask(cross_2d_small, plus_2d_small, threshold1=0.5)"
    ],
    "metadata": {
     "collapsed": false
@@ -1680,7 +1680,7 @@
     }
    ],
    "source": [
-    "M._intersection_mask(cross_2d_small, plus_2d_small, threshold1=0.5)"
+    "M.intersection_mask(cross_2d_small, plus_2d_small, threshold1=0.5)"
    ],
    "metadata": {
     "collapsed": false
@@ -1700,7 +1700,7 @@
     }
    ],
    "source": [
-    "M._union_mask(cross_2d_small, plus_2d_small, threshold1=0.0, threshold2=0.8)"
+    "M.union_mask(cross_2d_small, plus_2d_small, threshold1=0.0, threshold2=0.8)"
    ],
    "metadata": {
     "collapsed": false
