Small example extension

--- a/docs/Example_notebook.ipynb
+++ b/docs/Example_notebook.ipynb
@@ -133,6 +133,8 @@
    "outputs": [],
    "source": [
     "#download single image from kaggle api, also available in func download_class_images()\n",
+    "os.mkdir('/images')\n",
+    "os.mkdir('/images/n01491361')\n",
     "!kaggle competitions download -f \"/ILSVRC/Data/CLS-LOC/train/n01491361/n01491361_1000.JPEG\" -p ./images/ -c imagenet-object-localization-challenge"
    ],
    "metadata": {
