--- a/docs/Example_notebook.ipynb
+++ b/docs/Example_notebook.ipynb
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "input_dir = \"\\\\\".join(os.getcwd().split(sep=\"\\\\\")[:-2] + ['input'])\n",
-    "#Correct path to masks and input is crucial\n",
+    "#Correct path to masks and input is crucial, setup depends on users download path of the masks\n",
     "masks_dir = input_dir + f'\\\\ImageNetS50\\\\train-semi-segmentation\\\\'\n",
     "images_dir = \"\\\\\".join(os.getcwd().split(sep=\"\\\\\")[:-1] + ['notebooks', 'images']) + \"\\\\\"\n",
     "id = \"n01491361\"\n",
